 - Uses UNIX domain sockets now => Communication is 99.99% secure.
   Now KFM should work without any loopback device, too.
 - Use fixed path in kfmsu2. Hardcoded to "/opt/kde". Change if required.
 - Fixed bug in recursive copy/move
 - Fixed memory leak in kiojob.cpp

25.01.98 Lars Hoss

  - Added support for NoProxyFor and FTP. Patched kioslave to work with the
    new Proxy Manager
   
12.02.98 Stephan
  - fixed the decoding of Directories, that caused directories named as "asds#sdasd" to
    be shown as permsission denied

14.02.98 Stephan
  - applied patch by Martin Jones, that fixes the text selection in HTML view

16.02.98 Torben
 - Fixed bug in icon arrangement ( icons should not disappear any more ).
 - Moved unix domain sockets tp /tmp
 - Runs "touch" on the sockets every hour to keep /tmp cleaner daemons away
   from our sockets.
 - Keyboard support: Cursor keys move among the icons ( IconView only ).
                     Space selects/deselects icon
                     Return opens document/directory
                     ESC open popup menu for icon
   Uses the key event handling in KHTMLW. Deleted QAccel in kfmgui

18.02.98 Stephan
  - I moved the decoding of path() into KURL and fixed some things concerning
    decoding/encoding.
    Note: I think, kfm still doesn't handle the whole URL issue good enough,
    but to change this, would mean to replace the const char* arguments with
    KURL arguments, I guess

03/04/98 Bernd
  - Introduced a bunch of configuration options: Colors, Fonts, Link Cursor
  - I love it! :-)
  - Stephan please have a look at around line 70 in kkfmoptdlg.cpp
    I had to comment out two delete statements and can't say I understand
    precicely why.

03/05/98 Bernd
  - variable root grid sizes
  - fixed up the config/dekstop file. This file was not updated to 
    deal with the new grid root scheme -- no wonder that we got
    complains about the icons not being visible on first start up.
    